<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="button_title_skip">Skip</string>
    <string name="button_title_nex">Next</string>
    <string name="button_title_done">Done</string>
    <string name="unim_welcome_greeting">Welcome to Unim</string>
    <string name="onboarding_first_screen_title">Increase Your Peers!</string>
    <string name="onboarding_first_screen_description">Find your group mates and other student peers from all around the world. Find, send peer requests, and enjoy the community!</string>
    <string name="onboarding_second_screen_title">Engage in Buffet</string>
    <string name="onboarding_second_screen_description">Buffet - You will interact with your peers here as you have done in your university buffet. You can share your thoughts, pictures, videos, and many many other items to engage with others.</string>
    <string name="onboarding_third_screen_title">Customize Your Profile</string>
    <string name="onboarding_third_screen_description">Set up your online student presence! Inform the community about your interests, specialty, and other important stuff. It is easy and user-friendly, just try it!</string>

    <!-- SignIn SignUp Strings-->
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="sign_in_dont_have_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="personal_info">Personal Info</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="university_mail_recommendation">University mail is recommended</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="birthday">Birthdate</string>
    <string name="birthday_hint">dd/mm/yy</string>
    <string name="interests">Interests</string>
    <string name="name_of_university">Name of University</string>
    <string name="academic_degree">Academic Degree</string>
    <string name="start_year">Start Year</string>
    <string name="speciality">Specialty</string>
    <string name="continue_button">Continue</string>

    <!-- End region-->
    <!-- SignIn SignUp Strings-->
    <string name="set_password">Set Password</string>
    <string name="password_retype_hint">Retype Password</string>
    <string name="uppercase_checker_title">At least 1 uppercase letter;</string>
    <string name="symbol_checker_title">At least 8 symbol;</string>
    <string name="character_checker_title">Must be without . , _ - / %;</string>
    <!-- End region-->
</resources>