<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        tools:context="com.unimapp.authorization.signup.SignUpFragment">


        <TextView
            android:id="@+id/textView5"
            style="@style/Unim_Text_H4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/personal_info"
            android:textColor="@color/unim_main_color"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name"
            style="@style/Unim_Main_TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:layout_editor_absoluteX="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lastname"
            style="@style/Unim_Main_TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintTop_toBottomOf="@+id/first_name"
            tools:layout_editor_absoluteX="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Unim_Main_TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            app:endIconDrawable="@drawable/ic_info"
            app:endIconMode="custom"
            app:endIconTint="@color/unim_main_color"
            app:layout_constraintTop_toBottomOf="@+id/lastname"
            tools:layout_editor_absoluteX="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/email_recommendation"
            style="@style/Unim_Text_10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/university_mail_recommendation"
            app:layout_constraintTop_toBottomOf="@+id/email" />


        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:checkedButton="@id/male_button"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/email_recommendation">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/male_button"
                style="@style/Unim_Radio_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/male" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/female_button"
                style="@style/Unim_Radio_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/female" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/other_button"
                style="@style/Unim_Radio_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/other" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthday_input"
            style="@style/Unim_Main_TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            app:endIconDrawable="@drawable/ic_calendar"
            app:endIconMode="custom"
            app:endIconTint="@color/unim_main_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/birthday" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/interests_text"
            style="@style/Unim_Text_14sp_Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/interests"
            android:textSize="@dimen/text_size_18sp"
            app:layout_constraintTop_toBottomOf="@+id/birthday_input" />

        <com.unimapp.uitoolkit.tagview.TagView
            android:id="@+id/interest_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/interests_text" />

        <TextView
            android:id="@+id/university_info_title"
            style="@style/Unim_Text_H4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/personal_info"
            android:textColor="@color/unim_active_color"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/interest_tags" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/unversity_selector"
            style="@style/Unim_Selector_Dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/name_of_university"
            app:layout_constraintTop_toBottomOf="@+id/university_info_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/degree_selector"
            style="@style/Unim_Selector_Dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/academic_degree"
            app:layout_constraintTop_toBottomOf="@+id/unversity_selector" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/start_selector"
            style="@style/Unim_Selector_Dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/start_year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/degree_selector" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/speciality_selector"
            style="@style/Unim_Selector_Dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/speciality"
            app:layout_constraintTop_toBottomOf="@+id/start_selector" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/accept_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/speciality_selector" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continue_button"
            style="@style/Unim_Main_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:text="@string/continue_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accept_check" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
