<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unimapp.authorization.setpassword.SetPasswordFragment">

    <TextView
        android:id="@+id/set_password_title"
        style="@style/Unim_Text_H1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:text="@string/set_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/set_password"
        style="@style/Unim_Main_TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/set_password_title"
        app:layout_constraintTop_toBottomOf="@id/set_password_title"
        app:layout_constraintVertical_bias="0.08"
        app:passwordToggleDrawable="@drawable/password_field_toggle"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/unim_main_color">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:inputType="textPersonName"
            android:letterSpacing="0.7"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/set_password_retype"
        style="@style/Unim_Main_TextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="@+id/set_password_title"
        app:layout_constraintTop_toBottomOf="@id/set_password"
        app:passwordToggleDrawable="@drawable/password_field_toggle"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/unim_main_color">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_retype_hint"
            android:inputType="textPersonName"
            android:letterSpacing="0.7"
            android:textSize="@dimen/text_size_20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/uppercase_checker"
        style="@style/Unim_Text_H6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:drawablePadding="@dimen/_8sdp"
        android:text="@string/uppercase_checker_title"
        app:drawableStartCompat="@drawable/ic_checker_red"
        app:layout_constraintStart_toStartOf="@+id/set_password_title"
        app:layout_constraintTop_toBottomOf="@id/set_password_retype" />

    <TextView
        android:id="@+id/symbol_checker"
        style="@style/Unim_Text_H6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:drawablePadding="@dimen/_8sdp"
        android:text="@string/symbol_checker_title"
        app:drawableStartCompat="@drawable/ic_checker_red"
        app:layout_constraintStart_toStartOf="@+id/set_password_title"
        app:layout_constraintTop_toBottomOf="@id/uppercase_checker" />

    <TextView
        android:id="@+id/character_checker"
        style="@style/Unim_Text_H6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:drawablePadding="@dimen/_8sdp"
        android:text="@string/character_checker_title"
        app:drawableStartCompat="@drawable/ic_checker_red"
        app:layout_constraintStart_toStartOf="@+id/set_password_title"
        app:layout_constraintTop_toBottomOf="@id/symbol_checker" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_button"
        style="@style/Unim_Main_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16sdp"
        android:enabled="false"
        android:text="@string/continue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>